// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/docker/extract extractDependencies() extracts multiple FROM tags 1`] = `
Array [
  Object {
    "currentDepTag": "node:6.12.3",
    "currentDepTagDigest": "node:6.12.3",
    "currentDigest": undefined,
    "currentFrom": "node:6.12.3",
    "currentTag": "6.12.3",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node:6.12.3 as frontend",
    "fromPrefix": "FROM",
    "fromSuffix": "as frontend",
  },
  Object {
    "currentDepTag": "python:3.6-slim",
    "currentDepTagDigest": "python:3.6-slim",
    "currentDigest": undefined,
    "currentFrom": "python:3.6-slim",
    "currentTag": "3.6-slim",
    "depName": "python",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM python:3.6-slim",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles abnoral spacing 1`] = `
Array [
  Object {
    "currentDepTag": "node:8.7.0",
    "currentDepTagDigest": "node:8.7.0",
    "currentDigest": undefined,
    "currentFrom": "registry.allmine.info:5005/node:8.7.0",
    "currentTag": "8.7.0",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": "registry.allmine.info:5005",
    "fromLine": "FROM    registry.allmine.info:5005/node:8.7.0",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles comments 1`] = `
Array [
  Object {
    "currentDepTag": "node",
    "currentDepTagDigest": "node",
    "currentDigest": undefined,
    "currentFrom": "node",
    "currentTag": undefined,
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles custom hosts 1`] = `
Array [
  Object {
    "currentDepTag": "node:8",
    "currentDepTagDigest": "node:8",
    "currentDigest": undefined,
    "currentFrom": "registry2.something.info/node:8",
    "currentTag": "8",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": "registry2.something.info",
    "fromLine": "FROM registry2.something.info/node:8",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles custom hosts with namespace 1`] = `
Array [
  Object {
    "currentDepTag": "someaccount/node:8",
    "currentDepTagDigest": "someaccount/node:8",
    "currentDigest": undefined,
    "currentFrom": "registry2.something.info/someaccount/node:8",
    "currentTag": "8",
    "depName": "someaccount/node",
    "depType": "Dockerfile",
    "dockerRegistry": "registry2.something.info",
    "fromLine": "FROM registry2.something.info/someaccount/node:8",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles custom hosts with port 1`] = `
Array [
  Object {
    "currentDepTag": "node:8",
    "currentDepTagDigest": "node:8",
    "currentDigest": undefined,
    "currentFrom": "registry2.something.info:5005/node:8",
    "currentTag": "8",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": "registry2.something.info:5005",
    "fromLine": "FROM registry2.something.info:5005/node:8",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles digest 1`] = `
Array [
  Object {
    "currentDepTag": "node",
    "currentDepTagDigest": "node@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentDigest": "sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentFrom": "node@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentTag": undefined,
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles from as 1`] = `
Array [
  Object {
    "currentDepTag": "node:8.9.0-alpine",
    "currentDepTagDigest": "node:8.9.0-alpine",
    "currentDigest": undefined,
    "currentFrom": "node:8.9.0-alpine",
    "currentTag": "8.9.0-alpine",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node:8.9.0-alpine as base",
    "fromPrefix": "FROM",
    "fromSuffix": "as base",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles naked dep 1`] = `
Array [
  Object {
    "currentDepTag": "node",
    "currentDepTagDigest": "node",
    "currentDigest": undefined,
    "currentFrom": "node",
    "currentTag": undefined,
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles namespaced images 1`] = `
Array [
  Object {
    "currentDepTag": "mynamespace/node:8",
    "currentDepTagDigest": "mynamespace/node:8",
    "currentDigest": undefined,
    "currentFrom": "mynamespace/node:8",
    "currentTag": "8",
    "depName": "mynamespace/node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM mynamespace/node:8",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles tag 1`] = `
Array [
  Object {
    "currentDepTag": "node:8.9.0-alpine",
    "currentDepTagDigest": "node:8.9.0-alpine",
    "currentDigest": undefined,
    "currentFrom": "node:8.9.0-alpine",
    "currentTag": "8.9.0-alpine",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node:8.9.0-alpine",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() handles tag and digest 1`] = `
Array [
  Object {
    "currentDepTag": "node:8.9.0",
    "currentDepTagDigest": "node:8.9.0@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentDigest": "sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentFrom": "node:8.9.0@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "currentTag": "8.9.0",
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "FROM node:8.9.0@sha256:eb85fc5b1198f5e1ec025ea07586bdbbf397e7d82df66c90d7511f533517e063",
    "fromPrefix": "FROM",
    "fromSuffix": "",
  },
]
`;

exports[`lib/manager/docker/extract extractDependencies() is case insensitive 1`] = `
Array [
  Object {
    "currentDepTag": "node",
    "currentDepTagDigest": "node",
    "currentDigest": undefined,
    "currentFrom": "node",
    "currentTag": undefined,
    "depName": "node",
    "depType": "Dockerfile",
    "dockerRegistry": undefined,
    "fromLine": "From node",
    "fromPrefix": "From",
    "fromSuffix": "",
  },
]
`;
